Optimize code, general code clean up, fix warnings